crates/biome_cli/tests/snapshots/main_cases_vcs_ignored_files/honors_root_gitignore_directory_negation.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write '<TEMP_DIR>/honors_root_gitignore_directory_negation'
```

## `biome.jsonc`

```json
{
  "vcs": {
    "enabled": true,
    "clientKind": "git",
    "useIgnoreFile": true,
    "defaultBranch": "main"
  }
}
```

## `.gitignore`

```gitignore
/*
!/src
!/biome.jsonc
!/.gitignore

```

## `excluded/ignored.js`

```js
  statement(  )  
```

## `src/included.js`

```js
statement();

```

# Emitted Messages

```block
Formatted 2 files in <TIME>. Fixed 2 files.
```
