crates/biome_cli/tests/snapshots/main_cases_vcs_ignored_files/ignore_vcs_os_independent_parse.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --write '<TEMP_DIR>/ignore_vcs_os_independent_parse'
```

## `biome.json`

```json
{
  "vcs": {
    "enabled": true,
    "clientKind": "git",
    "useIgnoreFile": true
  }
}
```

## `.gitignore`

```gitignore
something.js
file2.js
file3.js
```

## `file1.js`

```js
blah.call();

```

## `file2.js`

```js
foo.call(); bar.call();
```

## `file3.js`

```js
console.log('biome is cool');
```

# Emitted Messages

```block
Checked 2 files in <TIME>. Fixed 2 files.
```
