crates/biome_cli/tests/snapshots/main_cases_vcs_ignored_files/ignores_file_inside_directory.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome check --vcs-enabled=true --vcs-client-kind=git --vcs-use-ignore-file=true --vcs-root=. --write --unsafe '<TEMP_DIR>/ignores_file_inside_directory'
```

## `.gitignore`

```gitignore

**/ignored/

```

## `ignored/file1.js`

```js
array.map(sentence => sentence.split('    ')).flat();
```

## `ignored/file2.js`

```js
foo.call(); bar.call();
```

# Termination Message

```block
check ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × No files were processed in the specified paths.
  
  i Check your biome.json or biome.jsonc to ensure the paths are not ignored by the configuration.
  
  i These paths were provided but ignored:
  
  - <TEMP_DIR>/ignores_file_inside_directory
  


```

# Emitted Messages

```block
Checked 0 files in <TIME>. No fixes applied.
```
