crates/biome_cli/tests/snapshots/main_cases_vcs_ignored_files/include_vcs_ignore_cascade.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format '<TEMP_DIR>/include_vcs_ignore_cascade' --write
```

## `biome.json`

```json
{
  "vcs": {
    "enabled": true,
    "clientKind": "git",
    "useIgnoreFile": true
  },
  "files": {
    "includes": ["**", "!file2.js"]
  },
  "formatter": {
    "includes": ["file1.js", "file2.js", "file4.js", "!file3.js"]
  }
}
```

## `.gitignore`

```gitignore
file4.js
```

## `file1.js`

```js
statement();

```

## `file2.js`

```js
  statement(  )  
```

## `file3.js`

```js
  statement(  )  
```

## `file4.js`

```js
  statement(  )  
```

# Emitted Messages

```block
Formatted 2 files in <TIME>. Fixed 2 files.
```
