crates/biome_cli/tests/snapshots/main_cases_vcs_ignored_files/use_root_gitignore_when_running_from_subdirectory.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format
```

## `biome.json`

```json
{
  "files": {
    "includes": ["packages/**"]
  },
  "vcs": {
    "enabled": true,
    "clientKind": "git",
    "useIgnoreFile": true
  }
}
```

## `.gitignore`

```gitignore
dist/
```

## `packages/lib/dist/out.js`

```js
foo.call(); bar.call();
```

## `packages/lib/src/in.js`

```js
foo.call(); bar.call();
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
src/in.js format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - foo.call();·bar.call();
      1 │ + foo.call();
      2 │ + bar.call();
      3 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
